--- a/mafia.html
+++ b/mafia.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>You role</title>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   </head>
-  <body>You is mafia</body>
+  <body><h1 style="color: var(--tg-theme-bg-color)">You is mafia</h1></body>
 </html>
