--- a/mafia.html
+++ b/mafia.html
@@ -2,6 +2,9 @@
   <head>
     <title>You role</title>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+    <link href="style.css" rel="stylesheet">
   </head>
-  <body><h1 style="color: var(--tg-theme-bg-color)">You is mafia</h1></body>
+  //
+  //var(--tg-theme-bg-color)
+  <body><h1 id="name">You is mafia</h1></body>
 </html>
