--- a/mafia.html
+++ b/mafia.html
@@ -4,5 +4,5 @@
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <link href="style.css" rel="stylesheet">
   </head>
-  <body><h1 id="name">You is mafia</h1></body>
+  <body id="body"><h1 id="name">You is mafia</h1></body>
 </html>
