--- a/mafia.html
+++ b/mafia.html
@@ -4,5 +4,9 @@
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <link href="style.css" rel="stylesheet">
   </head>
-  <body id="body"><h1 id="name">You is mafia</h1></body>
+  <body id="body">
+    <h1 class="role_h">Ваша роль</h1>
+    <h2 class="role_h" id="mafia_header">Мафия</h2>
+  </body>
+  <script></script>
 </html>
