--- a/mafia.html
+++ b/mafia.html
@@ -6,7 +6,7 @@
   </head>
   <body id="body">
     <h1 class="role_h">Ваша роль</h1>
-    <h2 class="role_h" id="mafia_header">Мафия</h2>
+    <h2 id="mafia_header">Мафия</h2>
   </body>
   <script></script>
 </html>
