--- a/mafia.html
+++ b/mafia.html
@@ -2,11 +2,10 @@
   <head>
     <title>You role</title>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
-    <link href="style.css" rel="stylesheet">
   </head>
-  <body id="body">
-    <h1 class="role_h">Ваша роль</h1>
-    <h2 id="mafia_header">Мафия</h2>
+  <body id="body" style="background-color: var(--tg-theme-text-color)">
+    <h1 style="color: var(--tg-theme-bg-color);">Ваша роль</h1>
+    <h2 style="color: var(--tg-theme-destructive-text-color);">Мафия</h2>
   </body>
   <script></script>
 </html>
