--- a/mafia.html
+++ b/mafia.html
@@ -4,8 +4,8 @@
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   </head>
   <body id="body" style="background-color: var(--tg-theme-text-color)">
-    <h1 style="color: var(--tg-theme-bg-color);">Ваша роль</h1>
-    <h2 style="color: var(--tg-theme-destructive-text-color);">Мафия</h2>
+    <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
+    <h2 style="color: var(--tg-theme-destructive-text-color);"><center>Мафия</center></h2>
   </body>
   <script></script>
 </html>
