--- a/mafia.html
+++ b/mafia.html
@@ -6,6 +6,9 @@
   <body id="body" style="background-color: var(--tg-theme-text-color)">
     <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
     <h2 style="color: var(--tg-theme-destructive-text-color);"><center>Мафия</center></h2>
+    <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;">
+      <h3 style="color: var(--tg-theme-text-color);"><center>Ваша задача ликвидировать всех, кроме мафии</center></h2>
+    </div>
   </body>
   <script></script>
 </html>
