--- a/sherif.html
+++ b/sherif.html
@@ -4,7 +4,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   </head>
   <body id="body" style="background-color: var(--tg-theme-text-color)">
-    <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
+    <h1 style="color: var(--tg-theme-bg-color);background-color: black"><center>Ваша роль</center></h1>
     <h2 style="color: yellow;"><center>Шериф</center></h2>
     <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;">
       <h3 style="color: var(--tg-theme-subtitle-text-color);"><center>Вы мирный житель. Но можете проверить игрока и узнать он мафия или не мафия</center></h2>
