--- a/doctor.html
+++ b/doctor.html
@@ -7,7 +7,7 @@
     <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
     <h2 style="color: green;background-color: black;"><center>Доктор</center></h2>
     <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;">
-      <h3 style="color: var(--tg-theme-subtitle-text-color);"><center>Вы мирный житель. Но можете лечить других игроков, если их ранят.</center></h2>
+      <h3 style="color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;"><center>Вы мирный житель. Но можете лечить других игроков, если их ранят.</center></h2>
     </div>
   </body>
 </html>
