--- a/sherif.html
+++ b/sherif.html
@@ -7,7 +7,7 @@
     <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
     <h2 style="color: yellow;background-color: black;"><center>Шериф</center></h2>
     <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;">
-      <h3 style="color: var(--tg-theme-subtitle-text-color);"><center>Вы мирный житель. Но можете узнать игрок мафия или не мафия</center></h2>
+      <h3 style="color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;"><center>Вы мирный житель. Но можете узнать игрок мафия или не мафия</center></h2>
     </div>
   </body>
 </html>
