--- a/mirn.html
+++ b/mirn.html
@@ -7,7 +7,7 @@
     <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
     <h2 style="color: var(--tg-theme-accent-text-color);"><center>Мирный житель</center></h2>
     <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;">
-      <h3 style="color: var(--tg-theme-subtitle-text-color);"><center>Ваша задача найти и устранить мафию</center></h2>
+      <h3 style="color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;"><center>Ваша задача найти и устранить мафию</center></h2>
     </div>
   </body>
 </html>
