--- a/doctor.html
+++ b/doctor.html
@@ -4,10 +4,10 @@
     <noscript src="https://telegram.org/js/telegram-web-app.js?56"></noscript>
   </head>
   <body id="body" style="background-color: var(--tg-theme-text-color)">
-    <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
-    <h2 style="color: green;background-color: black;"><center>Доктор</center></h2>
-    <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;">
-      <h3 style="color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;padding:10px;"><center>Вы мирный житель. Но можете лечить других игроков, если их ранят.</center></h2>
-    </div>
+      <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
+      <h2 style="color: green;background-color: black;"><center>Доктор</center></h2>
+      <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;margin: 0;padding: 0;border: 0px;">
+        <h3 style="position: static;color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;margin: 0em;border: 0px;margin-right: 15px;"><center style="margin: 0px;border: 0px;padding: 5px;">Вы мирный житель. Но можете лечить других игроков, если их ранят.</center></h3>
+      </div>
   </body>
 </html>
