--- a/doctor.html
+++ b/doctor.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>You role</title>
-    <noscript src="https://telegram.org/js/telegram-web-app.js?56"></noscript>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   </head>
   <body id="body" style="background-color: var(--tg-theme-text-color)">
       <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
