--- a/auto.html
+++ b/auto.html
@@ -9,21 +9,25 @@
         document.head.appendChild(script);
       }
     </script>
-    <script defer>
-      const params = new URL(location.href).searchParams;
-      name.innerHTML = params.get('name')
-      name.style.color = params.get('name_color')
-      name.style.backgroundColor = params.get('name_bgcolor')
-      body.style.backgroundColor = params.get('page_bgcolor')
-      description.innerHTML = params.get('description')
-      description.color = params.get('description_color')
-    </script>
   </head>
-  <body id="body" style="background-color: var(--tg-theme-text-color);visibility=hidden;" >
+  <body id="body" style="background-color: var(--tg-theme-text-color);visibility: hidden;" >
       <h1 style="color: var(--tg-theme-bg-color);"><center>Ваша роль</center></h1>
-      <h2 style="color: green;background-color: black;" id="name"><center>Доктор</center></h2>
+      <h2 style="color: green;background-color: black;" id="name" hidden><center>Доктор</center></h2>
       <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;margin: 0;padding: 0;border: 0px;">
         <h3 id="description" style="position: static;color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;margin: 0em;border: 0px;margin-right: 15px;"><center style="margin: 0px;border: 0px;padding: 5px;">Вы мирный житель. Но можете лечить других игроков, если их ранят.</center></h3>
       </div>
+    <script defer>
+      const params = new URL(location.href).searchParams;
+	  var header = document.createElement('h2');
+      header.style.color = params.get('name_color');
+      header.style.backgroundColor = params.get('name_bgcolor');
+	  header.style = "color: "+header.style.color+";background-color: "+header.style.backgroundColor+";"
+	  header.innerHTML = "<h3 id='name' style='" + "color: "+header.style.color+";background-color: "+header.style.backgroundColor+";" + "'><center>"+params.get('name')+"</center></h3>";
+	  document.body.appendChild(header);
+      body.style.backgroundColor = params.get('page_bgcolor');
+      description.innerHTML = "<center>"+params.get('description')+"</center>";;
+      description.color = params.get('description_color');
+	  body.style.visibility = "visible";
+    </script>
   </body>
 </html>
