--- a/auto.html
+++ b/auto.html
@@ -27,7 +27,7 @@
       body.style.backgroundColor = params.get('page_bgcolor');
       description.innerHTML = "<center>"+params.get('description')+"</center>";;
       description.color = params.get('description_color');
-	header_title.color = params.get('header_color');
+	header_title.color = params.get('head_color_using');
 	  body.style.visibility = "visible";
     </script>
   </body>
