--- a/auto.html
+++ b/auto.html
@@ -26,8 +26,8 @@
 	  document.body.appendChild(header);
       body.style.backgroundColor = params.get('page_bgcolor');
       description.innerHTML = "<center>"+params.get('description')+"</center>";;
-      description.color = params.get('description_color');
-	header_title.color = params.get('head_color_using');
+      description.style.color = params.get('description_color');
+	header_title.style.color = params.get('head_color_using');
 	  body.style.visibility = "visible";
     </script>
   </body>
