--- a/auto.html
+++ b/auto.html
@@ -29,6 +29,7 @@
       description.innerHTML = "<center>"+params.get('description')+"</center>";
       description.style.color = params.get('description_color');
 	__header_title_main__.style.color = params.get('head_color_using');
+	__header_title_main__.innerHTML = "<center>" + params.get('head_text_using') + "</center>";
 	  body.style.visibility = "visible";
     </script>
   </body>
