--- a/auto.html
+++ b/auto.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>You role</title>
+    <noscript>window.self !== window.top</noscript>
     <script>
-      if (window.self !== window.top || True) {
+      if (True) {
         var script = document.createElement('script');
         script.type = 'text/javascript';
         script.src = 'https://telegram.org/js/telegram-web-app.js?56';
