--- a/auto.html
+++ b/auto.html
@@ -3,7 +3,7 @@
     <title>You role</title>
     <noscript>window.self !== window.top</noscript>
     <script>
-      if (True) {
+      if (true) {
         var script = document.createElement('script');
         script.type = 'text/javascript';
         script.src = 'https://telegram.org/js/telegram-web-app.js?56';
