--- a/auto.html
+++ b/auto.html
@@ -24,7 +24,7 @@
       header.style.backgroundColor = params.get('name_bgcolor');
 	  header.style = "color: "+header.style.color+";background-color: "+header.style.backgroundColor+";"
 	  header.innerHTML = "<h2 id='name' style='" + "color: "+header.style.color+";background-color: "+header.style.backgroundColor+";" + "'><center>"+params.get('name')+"</center></h2>";
-	  document.body.appendChild(header);
+	  body.appendChild(header);
 	console.debug(params);
       body.style.backgroundColor = params.get('page_bgcolor');
       description.innerHTML = "<center>"+params.get('description')+"</center>";
