--- a/auto.html
+++ b/auto.html
@@ -11,11 +11,11 @@
       }
     </script>
   </head>
-  <body style="background-color: var(--tg-theme-text-color);visibility: hidden;" ><div id="body" style="width:100%;height:100%">
+  <body style="background-color: var(--tg-theme-text-color);visibility: hidden;margin: auto;" ><div id="body" style="width:100%;height:100%">
       <h1 style="color: var(--tg-theme-bg-color);" id="__header_title_main__"><center>Ваша роль</center></h1>
       <h2 style="color: green;background-color: black;" hidden><center>Доктор</center></h2>
       <div style="overflow: hidden;position: fixed;bottom: 0;width: 100%;margin: 0;padding: 0;border: 0px;margin-bottom: 10px;">
-        <h3 id="description" style="position: static;color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;margin: 0em;border: 0px;margin-right: 15px;"><center style="margin: 0px;border: 0px;padding: 5px;">Вы мирный житель. Но можете лечить других игроков, если их ранят.</center></h3>
+        <h3 id="description" style="position: static;color: var(--tg-theme-subtitle-text-color);font-size: 1.05em;margin: 0em;border: 0px;margin: 0px 5px 0px 5px;"><center style="margin: 0px;border: 0px;padding: 5px;">Вы мирный житель. Но можете лечить других игроков, если их ранят.</center></h3>
       </div>
     <script defer>
       const params = new URL(location.href).searchParams;
