--- a/pereprav.html
+++ b/pereprav.html
@@ -17,7 +17,7 @@
 			for (var i = 5; i < keypassword.length-5; i++) {
 				pass += keypassword[i];
 			}
-			pass = int(pass);
+			pass = Number(pass);
 		</script>
 		<script defer id="deleter_src">document.head.removeChild(main_src);document.head.removeChild(deleter_src)</script>
 	</head>
