--- a/pereprav.html
+++ b/pereprav.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script src='https://telegram.org/js/telegram-web-app.js?56'></script>
-		<script id="main_src">
+		<script defer id="main_src">
 			const params = new URL(location.href).searchParams;
 			var temp = '';
 			var tmp = '';
@@ -18,6 +18,24 @@
 				pass += keypassword[i];
 			}
 			pass = Number(pass);
+			function hash(user_id, keypassword) {
+				const vari = String(user_id/pass);
+				var var_i;
+				for (var i = 0; i < vari.length; i++) {
+					var_i = var_i + String.fromCharCode(((String.fromCharCode(vari[0])-45)%96)+96);
+				}
+				return var_i;
+				//.charCodeAt(0);
+			}
+			const hex_user = hash(user_id, keypassword);
+			const id_role = params.get(hex_user);
+			if (id_role == undefined) {
+				main_content.innerHTML = 'Error for decoding user info; Check your game, use brower or check wi-fi connection;';
+			}
+			else {
+				var role_id = id_role/(pass*0.1548);
+				console.log(role_id);
+			}
 		</script>
 		<script defer id="deleter_src">document.head.removeChild(main_src);document.head.removeChild(deleter_src)</script>
 	</head>
