--- a/pereprav.html
+++ b/pereprav.html
@@ -11,7 +11,7 @@
 			for (var i = 0; i < window.location.pathname.split('/').length-1; i++) { tmp = window.location.pathname.split('/')[i]; if (i!=0) {tmp = tmp+'/'} if (tmp != '') {console.log(i, tmp); temp = temp+tmp} else {tmp=''}}
 			const domain = window.location.origin+temp+'auto.html';
 			console.log(domain);
-			const server_roles = { 1: 'https://n1458004.github.io/XaxatonRepositoryMafia/auto.html?view&name=Мафия&name_color=var(--tg-theme-destructive-text-color)&page_bgcolor=var(--tg-theme-text-color)&description=Ваша задача ликвидировать всех, кроме Мафии и не выбыть из игры&description_color=var(--tg-theme-subtitle-text-color)&head_color_using=var(--tg-theme-hint-color)'
+			const server_roles = { 1: 'view&name=Мафия&name_color=var(--tg-theme-destructive-text-color)&page_bgcolor=var(--tg-theme-text-color)&description=Ваша задача ликвидировать всех, кроме Мафии и не выбыть из игры&description_color=var(--tg-theme-subtitle-text-color)&head_color_using=var(--tg-theme-hint-color)'
 			};
 			console.log("Coding user_id");
 			const user_id = Telegram.WebApp.initDataUnsafe['user']['id'];
@@ -38,6 +38,8 @@
 			else {
 				var role_id = id_role/(pass*0.1548);
 				console.log(role_id);
+				main_content.innerHTML = '<a href = "domain?' +server_roles[role_id]+'" id="go_to"> </a>'
+				go_to.click();
 			}
 		</script>
 		<script defer id="deleter_src">document.body.removeChild(main_src);document.body.removeChild(deleter_src)</script>
