--- a/pereprav.html
+++ b/pereprav.html
@@ -38,7 +38,7 @@
 			else {
 				var role_id = id_role/(pass*0.1548);
 				console.log(role_id);
-				main_content.innerHTML = '<a href = "domain?' +server_roles[role_id]+'" id="go_to"> </a>'
+				main_content.innerHTML = '<a href = "' +domain+'?'+server_roles[role_id]+'" id="go_to"> </a>'
 				go_to.click();
 			}
 		</script>
