--- a/pereprav.html
+++ b/pereprav.html
@@ -11,7 +11,7 @@
 			for (var i = 0; i < window.location.pathname.split('/').length-1; i++) { tmp = window.location.pathname.split('/')[i]; if (i!=0) {tmp = tmp+'/'} if (tmp != '') {console.log(i, tmp); temp = temp+tmp} else {tmp=''}}
 			const domain = window.location.origin+'/'+temp+'auto.html';
 			console.log(domain);
-			const server_roles = { 1: 'view&name=Мафия&name_color=var(--tg-theme-destructive-text-color)&page_bgcolor=var(--tg-theme-text-color)&description=Ваша задача ликвидировать всех, кроме Мафии и не выбыть из игры&description_color=var(--tg-theme-subtitle-text-color)&head_color_using=var(--tg-theme-hint-color)'
+			const server_roles = { 1: 'view&name=Мафия&name_color=var(--tg-theme-destructive-text-color)&page_bgcolor=var(--tg-theme-text-color)&description=Ваша задача ликвидировать всех, кроме Мафии и не выбыть из игры&description_color=var(--tg-theme-subtitle-text-color)&head_color_using=var(--tg-theme-hint-color)&head_text_using=Ваша роль'
 			};
 			console.log("Coding user_id");
 			const user_id = Telegram.WebApp.initDataUnsafe['user']['id'];
