--- a/pereprav.html
+++ b/pereprav.html
@@ -11,7 +11,9 @@
 			for (var i = 0; i < window.location.pathname.split('/').length-1; i++) { tmp = window.location.pathname.split('/')[i]; if (i!=0) {tmp = tmp+'/'} if (tmp != '') {console.log(i, tmp); temp = temp+tmp} else {tmp=''}}
 			const domain = window.location.origin+'/'+temp+'auto.html';
 			console.log(domain);
-			const server_roles = { 1: 'view&name=Мафия&name_color=var(--tg-theme-destructive-text-color)&page_bgcolor=var(--tg-theme-text-color)&description=Ваша задача ликвидировать всех, кроме Мафии и не выбыть из игры&description_color=var(--tg-theme-subtitle-text-color)&head_color_using=var(--tg-theme-hint-color)&head_text_using=Ваша роль'
+			const server_roles = { 1: 'view&name=Мафия&name_color=var(--tg-theme-destructive-text-color)&page_bgcolor=var(--tg-theme-text-color)&description=Ваша задача ликвидировать всех, кроме Мафии и не выбыть из игры.&description_color=var(--tg-theme-subtitle-text-color)&head_color_using=var(--tg-theme-hint-color)&head_text_using=Your role'
+			};
+			const server_roles_en = { 1: 'view&name=Mafia&name_color=var(--tg-theme-destructive-text-color)&page_bgcolor=var(--tg-theme-text-color)&description=Your task is to eliminate everyone except the Mafia and not get out of the game.&description_color=var(--tg-theme-subtitle-text-color)&head_color_using=var(--tg-theme-hint-color)&head_text_using=Ваша роль'
 			};
 			console.log("Coding user_id");
 			const user_id = Telegram.WebApp.initDataUnsafe['user']['id'];
@@ -38,7 +40,15 @@
 			else {
 				var role_id = id_role/(pass*0.1548);
 				console.log(role_id);
-				main_content.innerHTML = '<a href = "' +domain+'?'+server_roles[role_id]+'" id="go_to"> </a>'
+				function get_role(role_id) {
+					if (Telegram.WebApp.initDataUnsafe['user']['language_code'] == 'ru') {
+						return server_roles[role_id];
+					}
+					else {
+						return server_roles_en[role_id];
+					}
+				}
+				main_content.innerHTML = '<a href = "' +domain+'?'+get_role(role_id)+'" id="go_to"> </a>'
 				go_to.click();
 			}
 		</script>
