--- a/pereprav_code.html
+++ b/pereprav_code.html
@@ -1,2 +1,2 @@
-<a id="a1" href="http://192.168.0.105:55829">
-<script>a1.click();</script>
+<a id="a1" href="http://192.168.0.105:55829">Если не перенаправлены нажмите на ссылку</a>
+<script defer>a1.click();</script>
