--- a/pereprav_code.html
+++ b/pereprav_code.html
@@ -1,1 +1,1 @@
-<a id="a1" href="http://192.168.0.105:55829">Если не перенаправлены нажмите на ссылку</a>
+<a id="a1" href="https://192.168.0.105:55829">Если не перенаправлены нажмите на ссылку</a>
